# Wakili_Msomi_Backend

./: .dockerignore  .env.example  .gitignore  .test_token  API_DOCUMENTATION.md  Dockerfile  README.md  WHATSAPP_INTEGRATION.md  pyproject.toml  requirements.txt  setup.py  sheria-test  start.sh  test_payload.py  test_whatsapp_setup.py
app/: __init__.py  auth_utils.py  config.py  redis_db.py
app/api/: __init__.py  auth.py  main.py  whatsapp.py
app/core/: __init__.py  claude_client.py  conversation_store.py  document_processor.py  models.py  offline_processor.py
app/data/: offline_cache.db
app/data/models/: vectorizer.joblib
app/services/: ledger.py  whatsapp_service.py
app/static/css/: styles.css
app/static/swagger-ui/: custom.css
app/templates/: index.html  login.html  privacy-policy.html  terms-conditions.html
examples/: api_usage.js  api_usage.py  index.html
scripts/: generate_test_token.py  interactive_test.py  setup_swagger.py  test_user_conversations.sh
sheria_kiganjani.egg-info/: PKG-INFO  SOURCES.txt
